tests/error/tracing_errors/bad_arg.py
from guppylang.decorator import guppy


@guppy.declare
def foo(x: int) -> None: ...


@guppy.comptime
def test() -> None:
    foo(1.0)


guppy.compile(test)
